Use identity specific drafts/templates folders

Patch provided by Antonis Tsiapaliokas, coding style adapted.

BUG: 260593